# librenote

./: CMakeLists.txt  README.md  editor.cpp  editor.h  explorer.cpp  explorer.h  main.cpp  util.cpp  util.h  window.cpp  window.h
